alt fixes for img cards

--- a/guarantees.html
+++ b/guarantees.html
@@ -101,7 +101,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Какаши</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/kakashi.png" alt="john-wick">
+                              <img src="/images/product-characters/kakashi.png" alt="kakashi">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -114,7 +114,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/snowboy.png" alt="john-wick">
+                              <img src="/images/product-characters/snowboy.png" alt="snow-boy">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -127,7 +127,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="john-wick">
+                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -140,7 +140,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="john-wick">
+                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -166,7 +166,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Какаши</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/kakashi.png" alt="john-wick">
+                              <img src="/images/product-characters/kakashi.png" alt="kakashi">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -179,7 +179,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/snowboy.png" alt="john-wick">
+                              <img src="/images/product-characters/snowboy.png" alt="snow-boy">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -192,7 +192,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="john-wick">
+                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -205,7 +205,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="john-wick">
+                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
