--- a/news.html
+++ b/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fortnite</title>
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="css/global.css">
+	<link rel="stylesheet" href="css/news.css">
+	<link rel="stylesheet" href="css/news-media.css">
 
 </head>
 
@@ -28,8 +29,8 @@
 
 		<section class="news__articles news-articles">
 			<div class="news-articles__container container">
-				<h1 class="title">Новости игры&nbsp;Fortnite</h1>
-				<div class="news-articles__container">
+				<h1 class="news-articles__title title">Новости игры&nbsp;Fortnite</h1>
+				<div class="news-articles__container-flex">
 
 
 					<article class="news-articles__article article">
@@ -89,6 +90,9 @@
 	</main>
 	<!-- //NEWS -->
 
+	<!-- FOOTER -->
+
+	<!-- //FOOTER -->
 </body>
 
 </html>
