--- a/card-product.html
+++ b/card-product.html
@@ -100,7 +100,7 @@
 	<!-- FOOTER -->
 
 	<!-- //FOOTER -->
-	<script src="rating.js"></script>
+	<script src="js/rating.js"></script>
 </body>
 
 </html>
