modal files, big improvments)

--- a/footer.html
+++ b/footer.html
@@ -7,8 +7,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>FortNite</title>
    <link rel="stylesheet" href="css/reset.css">
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/media.css">
+   <link rel="stylesheet" href="css/global.css">
+   <link rel="stylesheet" href="css/footer.css">
+   <link rel="stylesheet" href="css/footer-media.css">
 
 </head>
 
