--- a/guarantees.html
+++ b/guarantees.html
@@ -7,9 +7,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>FortNite</title>
    <link rel="stylesheet" href="css/reset.css">
+   <link rel="stylesheet" href="css/global.css">
    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/media.css">
+   <link rel="stylesheet" href="css/guarantees.css">
+   <link rel="stylesheet" href="css/guarantees-media.css">
 
 </head>
 
@@ -220,41 +221,6 @@
          </div>
       </div>
    </section>
-
-
-
-   <footer class="footer">
-      <div class="container">
-         <div class="footer__inner">
-            <div class="footer__info">
-               <a class="logo" href="#">
-                  <img class="logo__img" src="/images/icons/logo.svg" alt="logo">
-               </a>
-               <p class="footer__text">Премиум магазин скинов Fortnite</p>
-               <a class="footer__political-link" href="#">
-                  <span>Политика конфиденциальности</span>
-               </a>
-               <a class="footer__agreement-link" href="#">
-                  <span>Пользовательское соглашение</span>
-               </a>
-            </div>
-
-            <div class="footer__payment">
-               <p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
-               <div class="footer__payment-box">
-                  <img class="footer__payment-img" src="/images/icons/perfect_money.svg" alt="perfect_money-icon">
-                  <img class="footer__payment-img" src="/images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
-                  <img class="footer__payment-img" src="/images/icons/yandex-money.svg" alt="yandex-money-icon">
-                  <img class="footer__payment-img" src="/images/icons/visa.svg" alt="visa-icon">
-                  <img class="footer__payment-img" src="/images/icons/mastercard.svg" alt="mastercard-icon">
-                  <img class="footer__payment-img" src="/images/icons/payeer.svg" alt="payeer-icon">
-                  <img class="footer__payment-img" src="/images/icons/mir.svg" alt="mir-icon">
-               </div>
-            </div>
-
-         </div>
-      </div>
-   </footer>
 
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
    <script src="js/main.js"></script>
