index(description added)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
    </section>
 
 
-
    <section class="catalog">
       <div class="container">
          <div class="catalog__inner">
@@ -382,6 +381,126 @@
 
          <a href="#scrollUp" class="pure-scroll"><button class="catalog__btn-anchor">Наверх</button></a>
 
+      </div>
+   </section>
+
+   <section class="description">
+      <div class="container">
+         <h2 class="description__title">Магазин скинов Fortnite</h2>
+         <p class="description__text">
+            В Fortnite множество возможностей: создавай уникальные острова, исследуй локации других игроков, но будь
+            яркими и узнаваемыми! Игра позволяет сделать персонажа индивидуальным, а наш магазин предоставляет доступ к
+            разным скинам и эмоциям. Неважно, что впереди, Королевская битва или Нулевая высота, побеждать нужно
+            красиво, так, чтобы тебя запомнили другие игроки. Выделяйся среди других персонажей и получай больше
+            преимуществ в игре. Пора включить эмоцию «Брейк-данс» и показать всё, на что ты способен!
+         </p>
+         <p class="description__text">
+            На все товары предоставляется <span>гарантия</span>. При покупке нет рисков – это обычное приобретение в
+            онлайн-магазине.
+            Твои права, личные данные и деньги полностью защищены. Единственный минус покупок – это невозможность
+            остановиться, ведь скинов много не бывает и всегда хочется получить ещё больше. Меняй внешний вид своих
+            любимых героев и открывай новые возможности игры. Перед тобой целая вселенная Фортнайт, которая ждёт такого
+            смелого и неординарного героя, как ты! Покажи остальным игрокам, как нужно выглядеть и выражать свои чувства
+            и эмоции. Используй товары нашего магазина, чтобы сделать свои аккаунт по-настоящему уникальным!
+         </p>
+
+         <h2 class="description__title">Что можно купить в нашем магазине?</h2>
+         <p class="description__text">
+            В нашем магазине ты найдёшь потрясающие и редкие скины и целую бурю эмоций под разные ситуации в игре.
+            Фортнайт – подходящая площадка для самовыражения. Покажи свою индивидуальность и создай героя, который лучше
+            всего покажет твой характер и настроение. Ещё больше возможностей ты получишь, купив Боевой пропуск – он и
+            другое игровое имущество у нас дешевле, поэтому позволь себе чуть больше. Ты можешь за небольшую стоимость
+            приобрести крутой скин, а если будет не хватать В-баксов на что-то в игре, то и эта проблема легко решается
+            на нашем сайте.
+            Не переплачивай – покупай выгодно и играй с удовольствием.
+         </p>
+
+         <h2 class="description__title">Купить скины в Фортнай </h2>
+         <p class="description__text">
+            Скины в игре играют не последнюю роль. Это выражение индивидуальности, настроения и показатель успешности
+            игрока. «Встречают по одёжке»
+            и именно поэтому все хотят получить редкие и необычные скины. Выбери скины в нашем интернет-магазине, чтобы
+            выделяться в толпе похожих героев.
+            У нас ты найдёшь редкие и необычные скины, которые уже не получить в Фортнайт. Используйте легендарные,
+            эпические и другие скины, чтобы сделать игру ещё увлекательнее и интереснее.
+         </p>
+         <p class="description__text">
+            Реши для себя – кто ты и выбери подходящий скин. Чувствуешь себя непобедимым злобным Blanka – значит, именно
+            он подойдёт тебе лучше всего.
+            Если твоё настроение – красочный розовый единорог с разноцветной гривой в модных шортах, тогда и это легко
+            решить – выбирай Fabio Sparklemane.
+            В преддверии праздников и вовсе можно подобрать уникальную эпическую экипировку, которую уже не купить в
+            игре.
+         </p>
+
+         <h2 class="description__title">Купить В-баксы Фортнайт </h2>
+         <p class="description__text">
+            Получить В-баксы можно в полной версии игры через фарм в «Сражении с бурей». Ещё валюта не спеша копится при
+            ежедневном входе игры, выполнении задач, но крупные суммы приходится собирать долго. Если В-баксы нужны
+            прямо сейчас, то выгоднее всего их купить в нашем магазине.
+            Ты получишь гарантию на покупку и сэкономишь на игровой валюте, что позволит прикупить на оставшийся реал
+            скины, боевой пропуск или эмоции. Наличие В-баксов существенно расширяет возможности игры:
+         </p>
+         <p class="description__text">
+            Покупка аксессуаров, например, скинов, танцев, граффити. В-баксы сделают твоих персонажей неповторимыми и
+            оригинальными: правильно распоряжайся игровой валютой, чтобы получить больше бонусов в игре.
+         </p>
+         <p class="description__text">
+            Боевой пропуск тоже доступен за игровую валюту. Он даёт много бонусов при прохождении игры. С его помощью ты
+            получишь скины и эмоции, которые не доступны во внутриигровом магазине.
+         </p>
+         <p class="description__text">
+            Повышение уровня боевого пропуска – это ещё больше наград, что тоже пригодится при прокачке аккаунта.
+         </p>
+         <p class="description__text">
+            Некоторые дополнения, которые сделают Фортнайт ещё увлекательнее и интереснее.
+         </p>
+
+         <h2 class="description__title">Купить боевой пропуск Фортнайт</h2>
+         <p class="description__text">
+            Покупка Боевого пропуска – это выгодное вложение, ведь так ты получишь ещё больше наград за игру. Совершая
+            обычные ежедневные действия, ты соберёшь уникальные награды, скины и другое ценное игровое имущество. И это
+            не единственный плюс покупки Боевого пропуска, ведь есть и другие:
+         </p>
+         <p class="description__text">
+            Эксклюзивность многих наград. Некоторые скины, эмоции ты можешь получить и у нас в интернет-магазине, но всё
+            же есть призы, которые доступны только в рамках прохождения Боевого пропуска. Тебя ждут много эмодзи, новые
+            загрузочные экраны, обёртки и другие увлекательные подарки.
+            Играть с Боевым пропуском в разы интереснее!
+         </p>
+         <p class="description__text">
+            Получение В-баксов в качестве награды. Игровая валюта лишней не бывает, а при помощи Боевого пропуска можно
+            накопить приличную сумму.
+         </p>
+         <p class="description__text">
+            Доступ к захватывающим испытаниям, которые не доступны остальным игрокам. Будь исключительным не только в
+            образе героя, но и в своей истории
+            в Фортнайт. Выбери свой тернистый путь героя, проходя который, ты будешь получать массу положительных эмоций
+            и отличные награды.
+         </p>
+         <p class="description__text">
+            Отличительная черта новых Боевых пропусков в том, что очки для его прохождения и получения наград можно
+            заработать не только в рамках Королевских битв, но и даже в Творческом режиме. Всё довольно просто:
+            создатель острова добавляет награды, а гости его локации зарабатывают Доктора Стренджа или другого крутого
+            героя.
+         </p>
+
+         <h2 class="description__title">Купить эмоции </h2>
+         <p class="description__text">
+            Эмоции Фортнайт превращают самую обычную игру в целое приключение. Можно изобразить танец с кинжалами или
+            проехаться по просторам игры
+            на сигвее – всё в твоих руках. Хочешь – примерь на себя облик зомби или задумчиво поброди по острову с
+            зонтиком. При желании можно даже полетать на метле перед удивлёнными игроками или сделать изящное сальто
+            назад. Что бы ты ни выбрал – это точно пригодится, чтобы привести в восторг других обитателей увлекательной
+            вселенной Фортнайт.
+         </p>
+         <p class="description__text">
+            В нашем интернет-магазине ты можешь купить любую эмоцию по своему вкусу. Мы за самовыражение и
+            индивидуальность, поэтому даже если тебе захочется устроить денежный дождь или изобразить звезду танцпола –
+            мы с удовольствием поддержим. Покупай уникальные скины, эмоции и получай максимум пользы и удовольствия при
+            прохождении Боевого пропуска. В Fortnite играют миллионы людей со всего мира, поэтому выделиться в толпе
+            не так просто, но с нами тебе это по силам!
+         </p>
       </div>
    </section>
 
