added_links-to-pages

--- a/card-product.html
+++ b/card-product.html
@@ -23,10 +23,11 @@
 						<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Снегобой</span>
 						</li>
 					</ul>
-					<a class="btn-prev-page">Назад </a>
+					<a href="./index.html" class="btn-prev-page">Назад </a>
 				</nav>
 			</div>
 		</section>
+		
 		<section class="card-product">
 			<div class="card-product__container container">
 				<div class="card-product__card card">
