--- a/news.html
+++ b/news.html
@@ -16,17 +16,18 @@
 <body class="news-page news">
 	<!-- NEWS -->
 	<main class="news__main main">
-
-		<div class="container">
-			<nav aria-label="Breadcrumb" class="breadcrumb">
-				<ul class="breadcrumb__list">
-					<li class="breadcrumb__link"><a href="#">Главная</a></li>
-					<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Новости</span></li>
-				</ul>
-				<a class="btn-prev-page">Назад </a>
-			</nav>
-		</div>
-
+		<section class="breadcrumbs">
+			<div class="container">
+				<nav aria-label="Breadcrumb" class="breadcrumb">
+					<ul class="breadcrumb__list">
+						<li class="breadcrumb__link"><a href="./index.html">Главная</a></li>
+						<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Новости</span>
+						</li>
+					</ul>
+					<a href="./index.html" class="btn-prev-page">Назад </a>
+				</nav>
+			</div>
+		</section>
 		<section class="news__articles news-articles">
 			<div class="news-articles__container container">
 				<h1 class="news-articles__title title">Новости игры&nbsp;Fortnite</h1>
