--- a/reviews.html
+++ b/reviews.html
@@ -18,7 +18,7 @@
 			<div class="container">
 				<nav aria-label="Breadcrumb" class="breadcrumb">
 					<ul class="breadcrumb__list">
-						<li class="breadcrumb__link"><a href="#">Главная</a></li>
+						<li class="breadcrumb__link"><a href="./index.html">Главная</a></li>
 						<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Отзывы</span>
 						</li>
 					</ul>
