added page раздача(participation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <link rel="stylesheet" href="css/index-media.css">
 
 
+
 </head>
 
 <body>
@@ -70,7 +71,7 @@
 
                <div class="intro__giveaway-timer">
                   <div class="intro__giveaway-time"> 04:33:21</div>
-                  <a href="#" class="intro__giveaway-btn">Участвовать</a>
+                  <a href="./participation.html" class="intro__giveaway-btn">Участвовать</a>
                   <img class="intro__giveaway-img" src="/images/index/b-cash.png" alt="b-cash">
                </div>
             </div>
